--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
     <title>Serene Sips</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- header section -->
+    <header id="header">
+      <h1>Welcome to serene sips</h1>
+      <p>Indulge in the finest coffee experience crafted just for you.</p>
+      <a href="#" id="our-menu">Explore Our Menu</a>
+    </header>
+
+    <!-- nav section -->
+    <nav>
+      <a href="#header">Home</a>
+      <a href="#our-menu">Menu</a>
+      <a href="#about-us">About Us</a>
+      <a href="#Contact-Us">Contact Us</a>
+    </nav>
+
+    <!-- our-menu section -->
+     <section id="our-menu">
+<h2>Our Menu</h2>
+     </section>
+
+    <!-- about us section -->
+    <section id="about-us">
+      <h2>About Us</h2>
+
+      <p>Welcome to Serene Sips Café, where every cup tells a story!</p>
+      <p>
+        Founded in 2020, our coffee journey began with a passion for creating a
+        cozy haven for coffee lovers. We believe in the artistry of brewing, the
+        warmth of community, and the joy found in a perfect cup of coffee.
+      </p>
+      <p>
+        At Serene Sips Café, we source the finest coffee beans from around the
+        world, ensuring a rich and flavorful experience in every sip. Our
+        commitment to quality extends to our cozy atmosphere, where each visit
+        feels like a comforting conversation among friends.
+      </p>
+      <p>
+        Our skilled baristas craft each cup with precision and care, aiming to
+        provide you with a delightful coffee experience every time. Whether
+        you're a seasoned coffee enthusiast or a casual sipper, our diverse menu
+        caters to every taste and preference.
+      </p>
+      <p>
+        Join us in this journey of aroma, flavor, and community. Discover the
+        magic that happens when passion meets a perfectly brewed cup of coffee
+        at Serene Sips Café.
+      </p>
+    </section>
+
+    <!-- Contact-Us section -->
+     <section id="Contact-Us">
+    <form action="">
+      <div>
+        <label for="">name</label>
+        <input type="text" />
+      </div>
+
+      <div>
+        <label for="">Email</label>
+        <input type="text" name="" id="" required />
+      </div>
+
+      <div>
+        <label for="">Message</label>
+        <textarea name="" id="" cols="10" rows="7"></textarea>
+      </div>
+
+      <div>
+        <input type="submit" value="Send Message" />
+      </div>
+    </form></section>
+
+    <!-- footer section -->
+     <footer>
+        <p>Copyright &copy; 2025. All rights reserved.</p>
+        <a href="#header">&uarr;</a>
+     </footer>
+  </body>
 </html>
