--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
     <title>Serene Sips</title>
   </head>
   <body>
@@ -23,9 +23,137 @@
     </nav>
 
     <!-- our-menu section -->
-     <section id="our-menu">
-<h2>Our Menu</h2>
-     </section>
+    <section id="our-menu">
+      <h2>Our Menu</h2>
+
+      <h3>Coffee Selections</h3>
+      <!-- Americano -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/Americano.jpg" alt="" />
+            <div class="card-body">
+              <h4>Americano</h4>
+              <p>
+                - Strong and black coffee. <br />
+                Perfect for the bold coffee enthusiast. <br />
+                <span class="price"> $2.50</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Vanilla Latte -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/glasses-with-coffee-with-whipped.jpg" alt="" />
+            <div class="card-body">
+              <h4>Vanilla Latte</h4>
+              <p>
+                - Bold espresso meets creamy steamed milk, <br />
+                finished with a delicate touch of vanilla. <br />
+                <span class="price"> $3.95</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cold Brew -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/pouring-coffee-glass.jpg" alt="" />
+            <div class="card-body">
+              <h4>Cold Brew</h4>
+              <p>
+                - Slow-steeped coffee for a smooth, <br />
+                bold flavor with low acidity. <br />
+                <span class="price"> $3.20</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h3>Delicious Snacks</h3>
+      <!-- Classic Croissant -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/top-view-vegan-baked-products-ar.jpg" alt="" />
+            <div class="card-body">
+              <h4>Classic Croissant</h4>
+              <p>
+                - Crisp on the outside, soft and airy <br />
+                within—crafted with rich, real butter. <br />
+                <span class="price"> $4.83</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Vanilla Cake -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/Vanilla cake (1).jpg" alt="" />
+            <div class="card-body">
+              <h4>Vanilla Cake</h4>
+              <p>
+                -Moist vanilla layers with a rich, <br />
+                creamy finish and delicate sweetness. <br />
+                <span class="price"> $4.25</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- CupCake -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/chocolate-cupcake-with-vanilla-c.jpg" alt="" />
+            <div class="card-body">
+              <h4>CupCake</h4>
+              <p>
+                - Soft, moist sponge topped with smooth, <br />
+                creamy frosting. Sweet and delightful. <br />
+                <span class="price"> $2.75</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bagel with Cream Cheese -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/bread-slice-spread-with-cheese-t.jpg" alt="" />
+            <div class="card-body">
+              <h4>Bagel with Cream Cheese</h4>
+              <p>
+                - Warm, chewy bagel paired with rich, <br />
+                velvety cream cheese. A classic favorite. <br />
+                <span class="price"> $3.40</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- about us section -->
     <section id="about-us">
@@ -57,32 +185,33 @@
     </section>
 
     <!-- Contact-Us section -->
-     <section id="Contact-Us">
-    <form action="">
-      <div>
-        <label for="">name</label>
-        <input type="text" />
-      </div>
+    <section id="Contact-Us">
+      <form action="">
+        <div>
+          <label for="">name</label>
+          <input type="text" />
+        </div>
 
-      <div>
-        <label for="">Email</label>
-        <input type="text" name="" id="" required />
-      </div>
+        <div>
+          <label for="">Email</label>
+          <input type="text" name="" id="" required />
+        </div>
 
-      <div>
-        <label for="">Message</label>
-        <textarea name="" id="" cols="10" rows="7"></textarea>
-      </div>
+        <div>
+          <label for="">Message</label>
+          <textarea name="" id="" cols="10" rows="7"></textarea>
+        </div>
 
-      <div>
-        <input type="submit" value="Send Message" />
-      </div>
-    </form></section>
+        <div>
+          <input type="submit" value="Send Message" />
+        </div>
+      </form>
+    </section>
 
     <!-- footer section -->
-     <footer>
-        <p>Copyright &copy; 2025. All rights reserved.</p>
-        <a href="#header">&uarr;</a>
-     </footer>
+    <footer>
+      <p>Copyright &copy; 2025. All rights reserved.</p>
+      <a href="#header">&uarr;</a>
+    </footer>
   </body>
 </html>
