--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
         </div>
       </div>
 
+      <!-- Cappuccino -->
+      <div class="menu-list">
+        <div class="card-container">
+          <div class="card">
+            <img src="image/Cappuccino.jpg" alt="" />
+            <div class="card-body">
+              <h4>Cappuccino</h4>
+              <p>
+                - Rich espresso topped with a thick <br />
+                layer of frothy steamed milk.
+                <br />
+                <span class="price"> $4.00</span>
+              </p>
+              <button class="btn-order">order</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <h3>Delicious Snacks</h3>
       <!-- Classic Croissant -->
       <div class="menu-list">
